# smartclip

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI.md  LICENSE  README.md  contribute.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: jax_mlp.py  plot_benchmarks.py  tf_cnn.py  torch_charlm.py  torch_cnn.py
docs/: algorithms.md  api.md  index.md
docs/guides/: hf_trainer.md  jax.md  keras.md  lightning.md  pytorch.md  telemetry.md  tensorflow.md
smartclip/: __init__.py  _lazy.py
smartclip/backends/: __init__.py
smartclip/backends/jax/: __init__.py  integrate.py
smartclip/backends/tf/: __init__.py  integrate.py
smartclip/backends/torch/: __init__.py  integrate.py
smartclip/core/: __init__.py  agc.py  autoclip.py  clipper_base.py  grouping.py  stats.py  types.py  utils.py  zscore.py
tests/: __init__.py  test_agc.py
tests/core/: test_autoclip.py  test_p2_stats.py  test_zscore.py
tests/jax/: test_jax_integrations.py  test_jax_real_integration.py
tests/tf/: test_tf_integrations.py  test_tf_real_integration.py
tests/torch/: test_torch_integrations.py  test_torch_metrics.py  test_torch_real_integration.py
